docs: 全面更新文档 - README/需求文档/修改记录
README.md:
- 功能特性分 P0/P1/P2 三级展示
- 工具列表更新为 18 个（含 P0/P2 工具）
- 命令列表更新为 28 个（分基础/P0/P1/P2 四组）
- 新增 MCP 服务器配置和使用说明
- 新增插件系统使用说明（JAR 加载、目录结构）
- 新增 Vim 模式和 Hook 系统使用说明
- 架构图更新：含 mcp/、plugin/、core/ 新组件
- 核心流程图更新：含 Hook 和权限确认
- 对应关系表新增 MCP/Plugin/Hook/Task 映射

需求文档.md:
- 5.1 实现清单更新为 18 工具 + 28 命令
- 5.2 P0/P1/P2 标记为全部已实现
- 仅保留 P3 跳过项目

修改记录.md:
- 新增 P0/P1/P2 四条修改记录（倒序排列）

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>